# foundry

./: .env.example  .gitignore  BUILD_PLAN.md  CLAUDE.md  NEXT.md  SETUP_NOTES.md  deploy.ps1  deploy.sh  foundry-spec.md  pyproject.toml  revision.md
foundry/: cli.py  config.py
foundry/dashboard/: app.py  db.py  indexer.py  llm.py
foundry/dashboard/routes/: __init__.py  api.py  brain_dump.py  devices.py  index.py  pipeline.py  projects.py  review.py  settings.py  triage.py
foundry/dashboard/static/: app.css
foundry/dashboard/templates/: 404.html  base.html  brain_dump.html  (+12 more)
foundry/devices/: manager.py
foundry/executor/: runner.py  ssh.py
foundry/llm/: audit.py  base.py  dispatcher.py
foundry/mcp/: server.py
foundry/notifications/: digest.py  telegram.py
foundry/prompts/: atomizer.md  bug_triage.md  classifier.md  critic.md  feature_killer.md  idea_killer.md  interviewer.md  task_tagger.md
foundry/triage/: atomizer.py  bug_triage.py  classifier.py  coordinator.py  critic.py  feature_killer.py  idea_killer.py  interviewer.py  schema.py  task_tagger.py
scripts/: import_vault_projects.py  remote_setup.sh
tests/: test_atomizer.py  test_bug_triage.py  test_classifier.py  test_coordinator.py  test_critic.py  test_dashboard.py  test_dashboard_projects.py  test_dashboard_review.py  test_dashboard_settings.py  test_dashboard_triage.py  test_db.py  test_devices.py  test_dispatcher.py  test_executor.py  test_feature_killer.py  test_idea_killer.py  test_indexer.py  test_interviewer.py  test_mcp_server.py  test_mcp_write.py  test_telegram.py  test_vault.py
(+21 files in other folders)
